app/assets/stylesheets/_application.scss
$bug-list: ("search-element-appearance": ()); 

@import "bumbleberry";
@import "settings";

$zindex-base: 0;

html, body {
    color: $black;
    position: relative;
    z-index: $zindex-base;
}

body {
    padding-bottom: 20vw;
}

h1, h2, h3, h4, h5, h6, label, button, .button, dt, th, .table-th, nav.sub-menu, legend {
    @include font-family(secondary);
    font-weight: normal;
}

h2 {
    margin: 0;
    font-size: 6vw;
}

h3, legend {
    font-size: 4.5vw;
    margin: 0.75em 0;
}

h3.subtitle {
    font-size: 1.5em;
}

h4 {
    font-size: 1.25em;
}

h5 {
    font-size: 1.125em;
}

h6 {
    font-size: 1em;
}

legend {
    font-size: 1.25em;
}

p {
    font-size: 4vw;
}

a {
    text-decoration: none;
    color: $link-colour;
    border-bottom: 0 solid;
    outline: 0;
    position: relative;
    cursor: pointer;

    @include after {
        content: '';
        position: absolute;
        border-bottom: 0 solid;
        right: 0;
        bottom: 0;
        left: 0;
        opacity: 0;
        @include _(transition, all 150ms ease-in-out);
        @include _(transform-origin, 25% 50%);
        @include _(transform, scaleX(0));
    }

    &:hover,
    &:active,
    &:focus {
        @include after {
            border-bottom: 0.1em solid;
            opacity: 1;
            @include _(transform, scaleX(1));
        }
    }
}

nav.sub-nav {
    text-align: center;

    ul {
        margin: 0.85em 0;
        list-style: none;
        padding: 0;
    }

    li {
        display: inline-block;

        @include after {
            content: '|';
            margin: 0 0.5em;
        }

        &:last-child {
            @include after {
                display: none;
            }
        }
    }
}

.screen-reader-text { 
    clip: rect(1px, 1px, 1px, 1px); 
    height: 1px; 
    width: 1px; 
    overflow: hidden; 
    position: absolute !important;
}
/* ... */

